// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The user module should trigger the correct render on / 1`] = `
{
  "render": [MockFunction] {
    "calls": [
      [
        "register.html",
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
}
`;

exports[`The user module should trigger the correct render on /register 1`] = `
{
  "render": [MockFunction] {
    "calls": [
      [
        "confirm-register.html",
        {
          "email": "itsame@mario.com",
          "token": "My4xNDE1OTI2NTM1ODk3OTMyMzg0NjI2NDMzOA%3D%3D",
        },
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
}
`;

exports[`The user module should trigger the correct render on /unregister 1`] = `
{
  "render": [MockFunction] {
    "calls": [
      [
        "unregister.html",
        {
          "email": "itsame@luigi.com",
        },
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
}
`;

exports[`The user module should trigger the correct render on /verify 1`] = `
{
  "render": [MockFunction] {
    "calls": [
      [
        "verify.html",
        {
          "date": "Thu, 08 Jan 1970 06:04:04 GMT",
          "dice": [
            0,
            1,
            1,
            2,
            3,
            5,
            8,
            13,
          ],
          "token": "eyJkaWNlIjpbMCwxLDEsMiwzLDUsOCwxM10sImRhdGUiOjYyNjY0NDgwMCwic2lnbmF0dXJlIjoiVkdobGNtVWdZWEpsSUc5MGFHVnlJSE5sWTNKbGRITT0ifQ%3D%3D",
        },
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
}
`;

exports[`The user module should trigger the correct render on /verify with invalid params 1`] = `
{
  "render": [MockFunction] {
    "calls": [
      [
        "verify.html",
        {
          "invalid": true,
        },
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
}
`;
